kubernetes/manifests/cats-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: cats-api
    name: cats-api                    # name of deployment
spec:
    replicas: 2                       # 2 pods managed by ReplicaController/DeploymentController
    selector:
        matchLabels:
            app: cats-api
    template:
        metadata:
            labels:
                app: cats-api
        spec:
            containers:
            # needed to be pushed everytime the image is changed
            - image: boseabhishek/cats-api
              imagePullPolicy: IfNotPresent
              name: cats-api
              volumeMounts:
              - name: config-volume
                mountPath: /app/config.json
                subPath: config.json
            volumes:
                - name: config-volume
                  configMap:
                    name: app-config
